# flet-spinkit

./: README.md  mkdocs.yml  pyproject.toml
docs/: FletSpinkit.md  index.md
examples/flet_spinkit_example/src/: main.py
src/flet_spinkit/: __init__.py  flet_spinkit.py
src/flutter/flet_spinkit/: README.md  pubspec.yaml
src/flutter/flet_spinkit/lib/src/: create_control.dart  spinkit.dart
