
[project]
name = "flet-spinkit"
version = "0.1.0"
description = "FletSpinkit control for Flet"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet-video>=0.1.0",
    "flet[all]>=0.28.3",
    "setuptools>=80.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]


[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/flet-spinkit"
Repository = "https://github.com/MyGithubAccount/flet-spinkit"
Issues = "https://github.com/MyGithubAccount/flet-spinkit/issues"

[tool.setuptools.package-data]
"flutter.flet_spinkit" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
mkdocs = "*"
mkdocstrings = { extras = ["python"], version = "*" }
mkdocs-material = "*"

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
